--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "todo",
   "version": "0.0.0",
   "description": "Hello Expo!",
-  "author": null,
+  "author": "omorilewa",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "expo": "^21.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz"
   }
